<resources>
    <string name="app_name">GPX Trip Tracker</string>
    <string name="file_name">File name:</string>
    <string name="language">Language</string>
    <string name="progress">Progress</string>
    <string name="home">HOME</string>
    <string name="data_loading">Data Loading</string>
    <string name="load_gpx_file">Open file</string>
    <string name="start_point">Start point:</string>
    <string name="end_point">End point:</string>
    <string name="planned_time">Planned time:</string>
    <string name="planned_time_hour">Planned time:</string>
    <string name="start_trip">Start Trip</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="notification_for_passed_points">Notification for passed points</string>
    <string name="display_coordinates">Display coordinates</string>
    <string name="delay">Delay:</string>
    <string name="lang_change_msg">Changing the language will require restarting the application. Are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_gpx">Invalid GPX file</string>
    <string name="invalid_extension">Please choose a file with .gpx extension.</string>
    <string name="notify_title">GPX Trip Tracker</string>
    <string name="arrived_at">You arrived at</string>
    <string name="service_notify">Location service is running in the background.</string>
    <string name="location_perm_denied">Location permission not granted.</string>
    <string name="home_subtitle">Begin your journey at your pace.</string>
    <string name="progress_info">Visualization of delay.</string>
    <string name="choose_file">Choose GPX file for your trip:</string>
    <string name="second_time">Predicted time:</string>
    <string name="coordinates">Coordinates: %sLat, %sLon</string>
    <string name="rest">Rest:</string>
    <string name="time_actual">Actual time:</string>
    <string name="time_predicted">Predicted time:</string>
    <string name="file_access_denied">Permission denied. Cannot access files.</string>
    <string name="location_granted">Location permission was granted.</string>
    <string name="location_denied">Location permission denied. Cannot get user\'s location.</string>
    <string name="home_page">Home Page</string>
</resources>