<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="@color/box"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/box"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/box"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:src="@drawable/upload_file_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/data_loading"
                android:textColor="@color/title_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvChooseGPX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:text="@string/choose_file"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Empty space -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btnLoadGPXFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:backgroundTint="@color/orange"
                android:drawableRight="@drawable/add_icon"
                android:text="@string/load_gpx_file"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/dot_purple"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/file_name"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvStartPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/dot_purple"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/start_point"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEndPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/dot_purple"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/end_point"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPlannedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/dot_purple"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/planned_time"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btnStartTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:backgroundTint="@color/inactive"
                android:drawableRight="@drawable/start"
                android:text="@string/start_trip"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkProgressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/progress"
                android:visibility="gone"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/notchColor"
                android:text="@string/cancel"
                android:visibility="gone"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>