<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/orange"
    android:elevation="4dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/location"
                android:gravity="center_vertical|start"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:text="Name"
                android:textColor="@color/home_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/clock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_upper_corners"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/dot_purple"
                android:drawablePadding="8dp"
                android:text="@string/coordinates"
                android:textColor="@color/title_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/dot_purple"
                android:drawablePadding="8dp"
                android:text="@string/rest"
                android:textColor="@color/title_text_color"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#A9A9A9" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="10dp"
                android:rowCount="1">

                <!-- Header -->
                <TextView
                    android:id="@+id/tvPlannedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/dot_purple"
                    android:drawablePadding="2dp"
                    android:text="@string/planned_time_hour"
                    android:textColor="@color/title_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSecondTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:drawableLeft="@drawable/dot_orange"
                    android:drawablePadding="2dp"
                    android:text="@string/time_predicted"
                    android:textColor="@color/title_text_color"
                    android:textSize="14sp" />

                <!-- Row 1 -->
                <TextView
                    android:id="@+id/tvPlannedTimePlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/dot_purple"
                    android:drawablePadding="8dp"
                    android:text="**:**:**"
                    android:textColor="@color/title_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSecondTimePlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:drawableLeft="@drawable/dot_orange"
                    android:drawablePadding="8dp"
                    android:text="**:**:**"
                    android:textColor="@color/title_text_color"
                    android:textSize="14sp" />
            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#A9A9A9" />

            <TextView
                android:id="@+id/tvDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/dot_purple"
                android:drawablePadding="8dp"
                android:text="@string/delay"
                android:textColor="@color/title_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDelayHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="***"
                android:textColor="@color/title_text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

